chore: simulasi lcg

--- a/testing-simulasi.ipynb
+++ b/testing-simulasi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "[90 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "6           180          3"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "6           180          3          0.03                    1.00"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "6                          100  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "6                          100                98-100  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "11           50         12"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        "11           50         12          0.13                    1.00"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "11                          100  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "11                          100                88-100  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,6 +1532,428 @@
     "\n",
     "frekuensi_berat\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LCG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lcg(z, a, c, m):\n",
+    "    return (a * z + c) % m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lcg_simulation(a, c, m, z0):\n",
+    "    zi = z0\n",
+    "    rows = []\n",
+    "\n",
+    "    # Menghasilkan 300 baris data\n",
+    "    for _ in range(0, 300):\n",
+    "        zi_next = lcg(zi, a, c, m)\n",
+    "        ui = zi_next / m\n",
+    "        ui_100 = ui * 100\n",
+    "        rows.append([_, zi, zi_next, round(ui, 5), round(ui_100)])\n",
+    "        zi = zi_next\n",
+    "\n",
+    "    return pd.DataFrame(rows, columns=['i', 'Zi-1', 'Zi', 'Ui', 'Ui x100'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>i</th>\n",
+       "      <th>Zi-1</th>\n",
+       "      <th>Zi</th>\n",
+       "      <th>Ui</th>\n",
+       "      <th>Ui x100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>10122005</td>\n",
+       "      <td>857215523</td>\n",
+       "      <td>0.39917</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>857215523</td>\n",
+       "      <td>1728292982</td>\n",
+       "      <td>0.80480</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1728292982</td>\n",
+       "      <td>1302674554</td>\n",
+       "      <td>0.60661</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1302674554</td>\n",
+       "      <td>134255704</td>\n",
+       "      <td>0.06252</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>134255704</td>\n",
+       "      <td>1294705799</td>\n",
+       "      <td>0.60289</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>295</td>\n",
+       "      <td>1370717944</td>\n",
+       "      <td>783266454</td>\n",
+       "      <td>0.36474</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>296</td>\n",
+       "      <td>783266454</td>\n",
+       "      <td>738891488</td>\n",
+       "      <td>0.34407</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>297</td>\n",
+       "      <td>738891488</td>\n",
+       "      <td>54531135</td>\n",
+       "      <td>0.02539</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>298</td>\n",
+       "      <td>54531135</td>\n",
+       "      <td>2102582920</td>\n",
+       "      <td>0.97909</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>299</td>\n",
+       "      <td>2102582920</td>\n",
+       "      <td>1419548738</td>\n",
+       "      <td>0.66103</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       i        Zi-1          Zi       Ui  Ui x100\n",
+       "0      0    10122005   857215523  0.39917       40\n",
+       "1      1   857215523  1728292982  0.80480       80\n",
+       "2      2  1728292982  1302674554  0.60661       61\n",
+       "3      3  1302674554   134255704  0.06252        6\n",
+       "4      4   134255704  1294705799  0.60289       60\n",
+       "..   ...         ...         ...      ...      ...\n",
+       "295  295  1370717944   783266454  0.36474       36\n",
+       "296  296   783266454   738891488  0.34407       34\n",
+       "297  297   738891488    54531135  0.02539        3\n",
+       "298  298    54531135  2102582920  0.97909       98\n",
+       "299  299  2102582920  1419548738  0.66103       66\n",
+       "\n",
+       "[300 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 16421\n",
+    "c = 12237\n",
+    "m = 2147483647\n",
+    "z0 = 10122005\n",
+    "\n",
+    "df_lcg = lcg_simulation(a, c, m, z0)\n",
+    "df_lcg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mahasiswa = pd.DataFrame({'mahasiswa_ke': range(1, 101)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     40\n",
+       "1     80\n",
+       "2     61\n",
+       "3      6\n",
+       "4     60\n",
+       "      ..\n",
+       "95    13\n",
+       "96    41\n",
+       "97    13\n",
+       "98    39\n",
+       "99    49\n",
+       "Name: Ui x100, Length: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lcg_tb = df_lcg['Ui x100'].iloc[0:100]\n",
+    "df_lcg_tb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     100\n",
+       "1      80\n",
+       "2      53\n",
+       "3      65\n",
+       "4      47\n",
+       "     ... \n",
+       "95     31\n",
+       "96     73\n",
+       "97     78\n",
+       "98    100\n",
+       "99     23\n",
+       "Name: Ui x100, Length: 100, dtype: int64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_lcg_bb = df_lcg['Ui x100'].iloc[100:200].reset_index(drop=True)\n",
+    "df_lcg_bb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mahasiswa_ke</th>\n",
+       "      <th>Tinggi Badan (Acak)</th>\n",
+       "      <th>Berat Badan (Acak)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>61</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>96</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>41</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>13</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>39</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
+       "      <td>49</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mahasiswa_ke  Tinggi Badan (Acak)  Berat Badan (Acak)\n",
+       "0              1                   40                 100\n",
+       "1              2                   80                  80\n",
+       "2              3                   61                  53\n",
+       "3              4                    6                  65\n",
+       "4              5                   60                  47\n",
+       "..           ...                  ...                 ...\n",
+       "95            96                   13                  31\n",
+       "96            97                   41                  73\n",
+       "97            98                   13                  78\n",
+       "98            99                   39                 100\n",
+       "99           100                   49                  23\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_simulasi_bmi = pd.concat([df_mahasiswa,df_lcg_tb, df_lcg_bb], axis=1)\n",
+    "df_simulasi_bmi.columns = ['mahasiswa_ke', 'Tinggi Badan (Acak)', 'Berat Badan (Acak)']\n",
+    "df_simulasi_bmi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    80\n",
+       "2    61\n",
+       "3     6\n",
+       "Name: Tinggi Badan (Acak), dtype: int64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
