chore: simulasi done

--- a/testing-simulasi.ipynb
+++ b/testing-simulasi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "[90 rows x 3 columns]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "6           180          3"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "6           180          3          0.03                    1.00"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "6                          100  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -746,13 +746,13 @@
        "6                          100                98-100  "
       ]
      },
-     "execution_count": 248,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Menghitung kolom tambahan untuk berat badan\n",
+    "# Menghitung kolom tambahan untuk tinggi badan\n",
     "frekuensi_tinggi['probabilitas_kumulatif_x100'] = (frekuensi_tinggi['probabilitas_kumulatif'] * 100).astype(int)\n",
     "frekuensi_tinggi['interval_angka_random'] = frekuensi_tinggi['probabilitas_kumulatif_x100'].shift(1, fill_value=0) + 1\n",
     "frekuensi_tinggi['interval_angka_random'] = frekuensi_tinggi['interval_angka_random'].astype(str) + '-' + frekuensi_tinggi['probabilitas_kumulatif_x100'].astype(str)\n",
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "11           50         12"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        "11           50         12          0.13                    1.00"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "11                          100  "
       ]
      },
-     "execution_count": 253,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "11                          100                88-100  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "Name: Ui x100, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1793,7 @@
        "Name: Ui x100, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2500,7 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
