--- a/testing-simulasi.ipynb
+++ b/testing-simulasi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "[90 rows x 3 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "6           180          3"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "6           180          3          0.03                    1.00"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "6                          100  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "6                          100                98-100  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "11           50         12"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        "11           50         12          0.13                    1.00"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
        "11                          100  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "11                          100                88-100  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
        "[300 rows x 5 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "Name: Ui x100, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1793,7 +1793,7 @@
        "Name: Ui x100, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2110,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
        "[100 rows x 6 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,16 +2304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bmi_status(bmi):\n",
-    "    if bmi <= 17:\n",
+    "    if bmi < 18:\n",
     "        return 'Underweight'\n",
-    "    elif 18 <= bmi <= 24:\n",
+    "    elif 18 < bmi < 25:\n",
     "        return 'Normal'\n",
-    "    elif 25 <= bmi <= 30:\n",
+    "    elif 25 < bmi < 31:\n",
     "        return 'Overweight'\n",
     "    else:\n",
     "        return 'Obesitas'"
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2500,7 @@
        "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2512,10 +2512,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Normal', 'Underweight'], dtype=object)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_simulasi_bmi['Status BMI'].unique()"
+   ]
   }
  ],
  "metadata": {
